--- a/changelog/2025/2025-04-07-iam.md
+++ b/changelog/2025/2025-04-07-iam.md
@@ -1,6 +1,18 @@
 ---
+icon: wand-sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
-# 
+# IAM Service - new query parameter
 
 ## Overview
 
