--- a/changelog/2025/2025-04-10-cart.md
+++ b/changelog/2025/2025-04-10-cart.md
@@ -1,6 +1,17 @@
 ---
+icon: sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
-
 # 2025-04-10: Cart Service - cart validation and configuration improvement
 
 ## Overview
