--- a/changelog/2025/2025-01-30-order.md
+++ b/changelog/2025/2025-01-30-order.md
@@ -1,4 +1,16 @@
 ---
+icon: wand-sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 
 # 2025-01-30: Order Service - new `priceListId` field
