--- a/changelog/2025/2025-02-05-cart.md
+++ b/changelog/2025/2025-02-05-cart.md
@@ -1,4 +1,16 @@
 ---
+icon: wand-sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 
 # 2025-02-05: Cart Service - enhanced price calculation details
