--- a/changelog/2025/2025-02-14-customer.md
+++ b/changelog/2025/2025-02-14-customer.md
@@ -1,9 +1,17 @@
 ---
+icon: wand-sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
-<Badge
-    tag="improvement"
-    date=""
-/>
 
 # 2025-02-14: Customer Service - new field
 
