--- a/changelog/2025/2025-02-24-label.md
+++ b/changelog/2025/2025-02-24-label.md
@@ -1,4 +1,16 @@
 ---
+icon: hourglass-half
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 # 2025-02-24: Label Service - deprecations
 
