--- a/changelog/2025/2025-03-17-order.md
+++ b/changelog/2025/2025-03-17-order.md
@@ -1,4 +1,16 @@
 ---
+icon: sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 # 2025-03-17: Order service - new endpoints to fetch orders for a legal entity
 
