--- a/changelog/2025/2025-03-28-coupon.md
+++ b/changelog/2025/2025-03-28-coupon.md
@@ -1,4 +1,16 @@
 ---
+icon: wand-sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 # 2025-03-28: Coupon Service - new `referralCoupon` field in the coupon model
 
