--- a/changelog/2025/2025-04-14-cart.md
+++ b/changelog/2025/2025-04-14-cart.md
@@ -1,4 +1,16 @@
 ---
+icon: sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 
 # 2025-04-14: Cart Service - support external discounts
