--- a/changelog/2025/2025-04-16-cart.md
+++ b/changelog/2025/2025-04-16-cart.md
@@ -1,3 +1,18 @@
+---
+icon: sparkles
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
+---
+
 # 2025-04-16: Cart Service - introduction of search endpoint
 
 ## Overview
