--- a/changelog/2025/2025-04-17-product.md
+++ b/changelog/2025/2025-04-17-product.md
@@ -1,5 +1,16 @@
 ---
 icon: hourglass-half
+layout:
+  title:
+    visible: true
+  description:
+    visible: true
+  tableOfContents:
+    visible: true
+  outline:
+    visible: false
+  pagination:
+    visible: true
 ---
 
 # 2025-04-17: Product Service - deprecations
