--- a/changelog/2025/2025-02-18-fee.md
+++ b/changelog/2025/2025-02-18-fee.md
@@ -23,8 +23,8 @@ A validation rule ensures fee data consistency by requiring a `taxCode` when cre
 
 | Endpoint                                                             | Description                                                     |
 |----------------------------------------------------------------------|-----------------------------------------------------------------|
-| [Creating fee](/openapi/fee/#operation/POST-fee-create-fee)          | Added validation of `taxCode` fee is marked with `taxable=true` |
-| [Retrieving fee by id](/openapi/fee/#operation/GET-fee-retrieve-fee) | Added validation of `taxCode` fee is marked with `taxable=true` |
+| [Creating fee](https://emporix.gitbook.io/documentation-portal/api-references/checkout/fee/api-reference/fee-management)          | Added validation of `taxCode` fee is marked with `taxable=true` |
+| [Retrieving fee by id](https://emporix.gitbook.io/documentation-portal/api-references/checkout/fee/api-reference/fee-management#get-fee-tenant-fees-id) | Added validation of `taxCode` fee is marked with `taxable=true` |
 
 ## Known problems
 
