--- a/changelog/2025/2025-03-04-brand.md
+++ b/changelog/2025/2025-03-04-brand.md
@@ -17,7 +17,7 @@ layout:
 
 ## Overview
 
-All deprecations will be removed on 2025-09-01. From now on, use the [media-service endpoints](/openapi/media/#operation/POST-media-create-asset) to manage media for brands.
+All deprecations will be removed on 2025-09-01. From now on, use the [media-service endpoints](https://emporix.gitbook.io/documentation-portal/api-references/media/media/api-reference/assets) to manage media for brands.
 
 ## Deprecated endpoints
 
