--- a/changelog/2025/2025-01-30-order.md
+++ b/changelog/2025/2025-01-30-order.md
@@ -23,7 +23,7 @@ The `priceListId` field  has been added to the create order endpoint.
 
 | Endpoint                                                                 | Description                                                    |
 | ----------------------------------------------------------------------   | ---------------------------------------------------------------|
-| [Creating a new order](/openapi/order/#operation/POST-order-create-order-employee) | Added a new `priceListId` field to the request body.                                     |
+| [Creating a new order](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Added a new `priceListId` field to the request body.                                     |
 
 ## Known problems
 
