--- a/changelog/2025/2025-02-05-cart.md
+++ b/changelog/2025/2025-02-05-cart.md
@@ -23,9 +23,9 @@ The Cart Service now provides detailed price calculation information through the
 
 | Endpoint | Description |
 |----------|-------------|
-| [Retrieving cart details by criteria](/openapi/cart/#operation/GET-cart-retrieve-cart-by-criteria) | Added `calculatedPrice` field to cart and cart items responses. |
-| [Retrieving cart details by ID](/openapi/cart/#operation/GET-cart-retrieve-cart-by-cartId) | Added `calculatedPrice` field to cart and cart items responses. |
-| [Retrieving all products added to a cart](/openapi/cart/#operation/GET-cart-list-cart-items) | Added `calculatedPrice` field to cart items responses. |
+| [Retrieving cart details by criteria](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts) | Added `calculatedPrice` field to cart and cart items responses. |
+| [Retrieving cart details by ID](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid) | Added `calculatedPrice` field to cart and cart items responses. |
+| [Retrieving all products added to a cart](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/cart-items#get-cart-tenant-carts-cartid-items) | Added `calculatedPrice` field to cart items responses. |
 
 ## Known problems
 
