--- a/changelog/2025/2025-02-14-customer.md
+++ b/changelog/2025/2025-02-14-customer.md
@@ -23,9 +23,9 @@ A new `lastLogin` field has been added to the customer response, returning a dat
 
 | Endpoint | Description |
 |----------|-------------|
-| [Retrieving a customer's profile](/openapi/customer-customer/#operation/GET-customer-retrieve-customer-profile) | Added `lastLogin` field to the responses. |
-| [Retrieving a customer profile](/openapi/customer-tenant/#operation/GET-customer-tenant-retrieve-customer) | Added `lastLogin` field to the responses. |
-| [Retrieving a list of customers](/openapi/customer-tenant/#operation/GET-customer-tenant-list-customers) | Added `lastLogin` field to the responses. |
+| [Retrieving a customer's profile](https://emporix.gitbook.io/documentation-portal/api-references/companies-and-customers/customer-management/account-and-profile) | Added `lastLogin` field to the responses. |
+| [Retrieving a customer profile](https://emporix.gitbook.io/documentation-portal/api-references/companies-and-customers/customer-service/api-reference/account-and-profile#get-customer-tenant-customers-customernumber) | Added `lastLogin` field to the responses. |
+| [Retrieving a list of customers](https://emporix.gitbook.io/documentation-portal/api-references/companies-and-customers/customer-service/api-reference/account-and-profile#get-customer-tenant-customers) | Added `lastLogin` field to the responses. |
 
 ## Known problems
 
