--- a/changelog/2025/2025-02-18-order.md
+++ b/changelog/2025/2025-02-18-order.md
@@ -45,10 +45,10 @@ Several fields in order's response have been deprecated in favor of new `calcula
 
 | Endpoint                                                                                               | Description                                                              |
 |--------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------|
-| [Creating a new order as employee](/openapi/order/#operation/POST-order-create-order-employee)         | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
-| [Creating a new order as customer](/openapi/order/#operation/POST-order-create-order)                 | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
-| [Retrieving order details](/openapi/order/#operation/GET-order-retrieve-order-storefront)             | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
-| [Retrieving a specific order by ID](/openapi/order/#operation/GET-order-retrieve-order-employee)      | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
+| [Creating a new order as employee](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)         | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
+| [Creating a new order as customer](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders)                 | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
+| [Retrieving order details](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid)             | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
+| [Retrieving a specific order by ID](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid)      | Deprecated response fields in favor of `calculatedPrice` and `unitPrice` |
 
 ## Known problems
 
