--- a/changelog/2025/2025-02-18-site.md
+++ b/changelog/2025/2025-02-18-site.md
@@ -23,10 +23,10 @@ A new `cartCalculationScale` field has been added to the site setting. The field
 
 | Endpoint                                                                                        | Description                                          |
 |-------------------------------------------------------------------------------------------------|------------------------------------------------------|
-| [Creating a site](/openapi/site-settings/#operation/POST-site-settings-create-site)             | Added `cartCalculationScale` field to the request.   |
-| [Fully updating a site](/openapi/site-settings/#operation/PUT-site-settings-update-site-config) | Added `cartCalculationScale` field to the request.   |
-| [Partially updating a site](/openapi/site-settings/#operation/PATCH-site-settings-update-site)  | Added `cartCalculationScale` field to the request.   |
-| [Retrieving a site](/openapi/site-settings/#operation/GET-site-settings-retrieve-site-config)   | Added `cartCalculationScale` field to the responses. |
+| [Creating a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#post-site-tenant-sites)             | Added `cartCalculationScale` field to the request.   |
+| [Fully updating a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#put-site-tenant-sites-sitecode) | Added `cartCalculationScale` field to the request.   |
+| [Partially updating a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#patch-site-tenant-sites-sitecode)  | Added `cartCalculationScale` field to the request.   |
+| [Retrieving a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#get-site-tenant-sites-sitecode)   | Added `cartCalculationScale` field to the responses. |
 
 ## Known problems
 
