--- a/changelog/2025/2025-03-04-brand.md
+++ b/changelog/2025/2025-03-04-brand.md
@@ -23,11 +23,11 @@ All deprecations will be removed on 2025-09-01. From now on, use the [media-serv
 
 | Endpoint                                                                          | Description                                                               |
 |-----------------------------------------------------------------------------------|---------------------------------------------------------------------------|
-| [Creating a media](/openapi/brand/#operation/POST-brand-add-media)                | Endpoint will be removed.                                                 |
-| [Deleting a media](/openapi/brand/#operation/DELETE-brand-remove-media)           | Endpoint will be removed.                                                 |
-| [Creating a brand](/openapi/brand/#operation/POST-brand-create-brand)              | The `image` and `cloudinaryUrl` fields will be removed from request body. |
-| [Updating a brand](/openapi/brand/#operation/PUT-brand-update-brand)              | The `image` and `cloudinaryUrl` fields will be removed from request body. |
-| [Partially updating a brand](/openapi/brand/#operation/PATCH-brand-update-brand)  | The `image` and `cloudinaryUrl` fields will be removed from request body. |
+| [Creating a media](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/brand-service/api-reference/media)                | Endpoint will be removed.                                                 |
+| [Deleting a media](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/brand-service/api-reference/media#delete-media-mediaid)           | Endpoint will be removed.                                                 |
+| [Creating a brand](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/brand-service/api-reference/brands#post-brands)              | The `image` and `cloudinaryUrl` fields will be removed from request body. |
+| [Updating a brand](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/brand-service/api-reference/brands#put-brands-brandid)              | The `image` and `cloudinaryUrl` fields will be removed from request body. |
+| [Partially updating a brand](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/brand-service/api-reference/brands#patch-brands-brandid)  | The `image` and `cloudinaryUrl` fields will be removed from request body. |
 
 ## Known problems
 
