--- a/changelog/2025/2025-03-05-order.md
+++ b/changelog/2025/2025-03-05-order.md
@@ -25,8 +25,8 @@ This field is intended exclusively for B2B cases and specifies the legal entity 
 |-----------------------------------------------------------------------------------------------------|-------------------------------------------------|
 | [Creating a new order](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders)                  | New request attribute `legalEntityId` added.  |
 | [Updating an order](/openapi/order/#operation/PUT-order-update-order)                               | New request attribute `legalEntityId` added.  |
-| [Partially updating an order](/openapi/order/#operation/PATCH-order-partial-update-order)           | New request attribute `legalEntityId` added.  |
-| [Retrieving orders](/openapi/order/#operation/GET-order-retrieve-tenant-orders)                     | New response attribute `legalEntityId` added.  |
+| [Partially updating an order](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#put-order-v2-tenant-salesorders-orderid)           | New request attribute `legalEntityId` added.  |
+| [Retrieving orders](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders)                     | New response attribute `legalEntityId` added.  |
 | [Retrieving a specific order by ID](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid)    | New response attribute `legalEntityId` added.  |
 
 ## Known problems
