--- a/changelog/2025/2025-03-21-site.md
+++ b/changelog/2025/2025-03-21-site.md
@@ -28,7 +28,7 @@ The `timezone` field has been added to the `site.homeBase` request and response 
 
 | Endpoint                                                                                          | Description                                                 |
 |---------------------------------------------------------------------------------------------------|-------------------------------------------------------------|
-| [Retrieving sites](/openapi/site-settings/#operation/GET-site-settings-list-site-configurations)  | The `homeBase.timezone` field added to the response body. |
+| [Retrieving sites](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings)  | The `homeBase.timezone` field added to the response body. |
 | [Retrieving a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#get-site-tenant-sites-sitecode)     | The `homeBase.timezone` field added to the response body. |
 | [Creating a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#post-site-tenant-sites)               | The `homeBase.timezone` field added to the request body.  |
 | [Fully updating a site](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/configuration/site-settings-service/api-reference/site-settings#put-site-tenant-sites-sitecode)   | The `homeBase.timezone` field added to the request body.  |
