--- a/changelog/2025/2025-04-14-cart.md
+++ b/changelog/2025/2025-04-14-cart.md
@@ -23,9 +23,9 @@ The cart service now allows to specify external discounts on an item level. The 
 
 | Endpoint                                                                                          | Description                       |
 |---------------------------------------------------------------------------------------------------|-----------------------------------|
-| [Adding a product to cart](/openapi/cart/#operation/POST-cart-add-item-to-cart)                   | Added the `externalDiscounts` attribute. |
-| [Adding multiple products to cart](/openapi/cart/#operation/POST-cart-add-multiple-items-to-cart) | Added the `externalDiscounts` attribute. |
-| [Updating a cart item](/openapi/cart/#operation/POST-cart-add-item-to-cart)                       | Added the `externalDiscounts` attribute. |
+| [Adding a product to cart](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/cart-items#post-cart-tenant-carts-cartid-items)                   | Added the `externalDiscounts` attribute. |
+| [Adding multiple products to cart](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/cart-items#post-cart-tenant-carts-cartid-itemsbatch) | Added the `externalDiscounts` attribute. |
+| [Updating a cart item](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/cart-items#post-cart-tenant-carts-cartid-items)                       | Added the `externalDiscounts` attribute. |
 
 ## Known problems
 
