--- a/changelog/2025/2025-04-03-schema.md
+++ b/changelog/2025/2025-04-03-schema.md
@@ -22,21 +22,21 @@ We added new API for managing custom schema types and custom instances. Custom s
 
 | Endpoint                                                                                                   | Description                             |
 |------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| [Creating a custom schema type](/openapi/schema/#operation/POST-schema-create-custom-schema-type)          | It creates a new schema type.           |
-| [Retrieving all custom schema types](/openapi/schema/#operation/GET-schema-retrieve-custom-schema-types)   | It retrieves all custom schema types.   |
-| [Retrieving a custom schema type](/openapi/schema/#operation/GET-schema-retrieve-custom-schema-type)       | It retrieves a custom schema type.      |
-| [Deleting a custom schema type](/openapi/schema/#operation/DELETE-schema-remove-custom-schema-type)        | It deletes a custom schema type.        |
-| [Upserting a custom schema type](/openapi/schema/#operation/PUT-schema-upsert-custom-schema-type)          | It upserts custom schema type.          |
-| [Creating a custom instance](/openapi/schema/#operation/POST-schema-create-custom-instance)                | It creates a custom instance.           |
-| [Retrieving all custom instances](/openapi/schema/#operation/GET-schema-retrieve-custom-instances)         | It retrieves all custom instances.      |
-| [Retrieving a custom instance](/openapi/schema/#operation/GET-schema-retrieve-custom-instance)             | It retrieves a custom instance.         |
-| [Deleting a custom instance](/openapi/schema/#operation/DELETE-schema-remove-custom-instance)              | It deletes a custom instance.           |
-| [Upserting a custom instance](/openapi/schema/#operation/PUT-schema-upsert-custom-instance)                | It upserts a custom instance.           |
-| [Patching a custom instance](/openapi/schema/#operation/PATCH-schema-patch-custom-instance)                | It partially updates a custom instance. |
-| [Searching for custom instances](/openapi/schema/#operation/POST-schema-search-custom-instances)           | It searches for custom instances.       |
-| [Creating custom instances in bulk](/openapi/schema/#operation/POST-schema-create-custom-instances-bulk)   | It creates custom instances in bulk.    |
-| [Upserting custom instances in bulk](/openapi/schema/#operation/PUT-schema-create-custom-instances-bulk)   | It upserts custom instances in bulk.    |
-| [Deleting custom instances in bulk](/openapi/schema/#operation/DELETE-schema-create-custom-instances-bulk) | It deletes custom instances in bulk.    |
+| [Creating a custom schema type](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-schema-type#post-schema-tenant-custom-entities)          | It creates a new schema type.           |
+| [Retrieving all custom schema types](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-schema-type#get-schema-tenant-custom-entities)   | It retrieves all custom schema types.   |
+| [Retrieving a custom schema type](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-schema-type#get-schema-tenant-custom-entities-id)       | It retrieves a custom schema type.      |
+| [Deleting a custom schema type](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-schema-type#delete-schema-tenant-custom-entities-id)        | It deletes a custom schema type.        |
+| [Upserting a custom schema type](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-schema-type#put-schema-tenant-custom-entities-id)          | It upserts custom schema type.          |
+| [Creating a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#post-schema-tenant-custom-entities-type-instances)                | It creates a custom instance.           |
+| [Retrieving all custom instances](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#get-schema-tenant-custom-entities-type-instances)         | It retrieves all custom instances.      |
+| [Retrieving a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#get-schema-tenant-custom-entities-type-instances-id)             | It retrieves a custom instance.         |
+| [Deleting a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#delete-schema-tenant-custom-entities-type-instances-id))              | It deletes a custom instance.           |
+| [Upserting a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#put-schema-tenant-custom-entities-type-instances-id)                | It upserts a custom instance.           |
+| [Patching a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#patch-schema-tenant-custom-entities-type-instances-id)                | It partially updates a custom instance. |
+| [Searching for custom instances](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#post-schema-tenant-custom-entities-type-instances-search)           | It searches for custom instances.       |
+| [Creating custom instances in bulk](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#post-schema-tenant-custom-entities-type-instances-bulk)   | It creates custom instances in bulk.    |
+| [Upserting custom instances in bulk](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#put-schema-tenant-custom-entities-type-instances-bulk)   | It upserts custom instances in bulk.    |
+| [Deleting custom instances in bulk](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#delete-schema-tenant-custom-entities-type-instances-bulk) | It deletes custom instances in bulk.    |
 
 ## Known problems
 
