--- a/changelog/2025/2025-04-16-cart.md
+++ b/changelog/2025/2025-04-16-cart.md
@@ -23,7 +23,7 @@ The cart service was extended with search endpoint which allows to search for ma
 
 | Endpoint                                                                         | Description                  |
 |----------------------------------------------------------------------------------|------------------------------|
-| [Search endpoint](/openapi/cart/#operation/POST-cart-retrieve-carts-by-search)   | New endpoint has been added. |
+| [Search endpoint](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/carts#post-cart-tenant-carts-search)   | New endpoint has been added. |
 
 ## Known problems
 
