--- a/changelog/2025/2025-04-03-schema.md
+++ b/changelog/2025/2025-04-03-schema.md
@@ -30,7 +30,7 @@ We added new API for managing custom schema types and custom instances. Custom s
 | [Creating a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#post-schema-tenant-custom-entities-type-instances)                | It creates a custom instance.           |
 | [Retrieving all custom instances](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#get-schema-tenant-custom-entities-type-instances)         | It retrieves all custom instances.      |
 | [Retrieving a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#get-schema-tenant-custom-entities-type-instances-id)             | It retrieves a custom instance.         |
-| [Deleting a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#delete-schema-tenant-custom-entities-type-instances-id))              | It deletes a custom instance.           |
+| [Deleting a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#delete-schema-tenant-custom-entities-type-instances-id)             | It deletes a custom instance.           |
 | [Upserting a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#put-schema-tenant-custom-entities-type-instances-id)                | It upserts a custom instance.           |
 | [Patching a custom instance](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#patch-schema-tenant-custom-entities-type-instances-id)                | It partially updates a custom instance. |
 | [Searching for custom instances](https://emporix.gitbook.io/documentation-portal/api-references/utilities/schema/api-reference/custom-instance#post-schema-tenant-custom-entities-type-instances-search)           | It searches for custom instances.       |
