--- a/changelog/2025/2025-02-24-label.md
+++ b/changelog/2025/2025-02-24-label.md
@@ -23,10 +23,10 @@ All deprecations will be removed on 2025-09-01. From now on, use the [media-serv
 | Endpoint                                                                          | Description                                                           |
 |-----------------------------------------------------------------------------------|-----------------------------------------------------------------------|
 | [Creating a media](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/media)             | Endpoint will be removed.                                             |
-| [Deleting a media]([/openapi/label/#operation/DELETE-label-remove-media](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/media#delete-media-mediaid))           | Endpoint will be removed.                                             |
-| [Creating a label]([/openapi/label/#operation/POST-label-create-label](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/label#post-labels))             | The `image` and `cloudinaryUrl` fields will be removed from request body. |
-| [Updating a label]([/openapi/label/#operation/PUT-label-update-label](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/label#put-labels-labelid))              | The `image` and `cloudinaryUrl` fields will be removed from request body. |
-| [Partially updating a label]([/openapi/label/#operation/PATCH-label-update-label](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/label#patch-labels-labelid))  | The `image` and `cloudinaryUrl` fields will be removed from request body. |
+| [Deleting a media](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/media#delete-media-mediaid)         | Endpoint will be removed.                                             |
+| [Creating a label](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/label#post-labels)            | The `image` and `cloudinaryUrl` fields will be removed from request body. |
+| [Updating a label](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/label#put-labels-labelid)              | The `image` and `cloudinaryUrl` fields will be removed from request body. |
+| [Partially updating a label](https://emporix.gitbook.io/documentation-portal/api-references/products-labels-and-brands/label-service/api-reference/label#patch-labels-labelid)  | The `image` and `cloudinaryUrl` fields will be removed from request body. |
 
 ## Known problems
 
