--- a/changelog/2025/2025-03-28-coupon.md
+++ b/changelog/2025/2025-03-28-coupon.md
@@ -22,7 +22,7 @@ A new `referralCoupon` field has been added to the endpoint. This field indicate
 
 | Endpoint                                                                                                          | Description                                          |
 |-------------------------------------------------------------------------------------------------------------------|------------------------------------------------------|
-| [Retrieving list of coupons by criteria](https://emporix.gitbook.io/documentation-portal/api-references/rewards-and-promotions/coupon/api-reference/coupon-management            | New property `referralCoupon` added to the response. |
+| [Retrieving list of coupons by criteria](https://emporix.gitbook.io/documentation-portal/api-references/rewards-and-promotions/coupon/api-reference/coupon-management)           | New property `referralCoupon` added to the response. |
 | [Retrieving information about particular coupon by code](https://emporix.gitbook.io/documentation-portal/api-references/rewards-and-promotions/coupon/api-reference/coupon-management#get-coupon-tenant-coupons-code)   | New property `referralCoupon` added to the response. |
 
 ## Known problems
