--- a/changelog/2025/2025-05-12-customer.md
+++ b/changelog/2025/2025-05-12-customer.md
@@ -13,7 +13,7 @@ layout:
     visible: true
 ---
 
-# 2025-05-12: Customer Segments Service - fully operational
+# 2025-05-12: Customer Service - improvements
 
 ## Overview
 
