links - domain change

--- a/changelog/2025/2025-02-05-order.md
+++ b/changelog/2025/2025-02-05-order.md
@@ -23,10 +23,10 @@ The Order Service now provides detailed price calculation information through th
 
 | Endpoint | Description |
 |----------|-------------|
-| [Creating a new order as employee](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Added `calculatedPrice` field to order and order entries. |
-| [Creating a new order as customer](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders) | Added `calculatedPrice` field to order and order entries. |
-| [Retrieving order details](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid) | Added `calculatedPrice` field to order and order entries responses. |
-| [Retrieving a specific order by ID](https://emporix.gitbook.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | Added `calculatedPrice` field to order and order entries responses. |
+| [Creating a new order as employee](https://developer.emporix.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#post-order-v2-tenant-salesorders) | Added `calculatedPrice` field to order and order entries. |
+| [Creating a new order as customer](https://developer.emporix.io/documentation-portal/api-references/orders/order/api-reference/orders-customer-managed#post-order-v2-tenant-orders) | Added `calculatedPrice` field to order and order entries. |
+| [Retrieving order details](https://developer.emporix.io/documentation-portal/api-references/orders/order/api-reference/orders-customer-managed#get-order-v2-tenant-orders-orderid) | Added `calculatedPrice` field to order and order entries responses. |
+| [Retrieving a specific order by ID](https://developer.emporix.io/documentation-portal/api-references/orders/order/api-reference/orders-tenant-managed#get-order-v2-tenant-salesorders-orderid) | Added `calculatedPrice` field to order and order entries responses. |
 
 ## Known problems
 
