--- a/changelog/2025/2025-04-07-iam.md
+++ b/changelog/2025/2025-04-07-iam.md
@@ -22,7 +22,7 @@ Query parameter `q` has been added to `GET` all groups endpoint. The new query p
 
 | Endpoint                                                                           | Description                                  |
 | ---------------------------------------------------------------------------------  | -------------------------------------------  |
-| [Retrieving all groups](https://emporix.gitbook.io/documentation-portal/api-references/users-and-permissions/iam/api-reference/groups)   | The new query parameter `q` has been added.  |
+| [Retrieving all groups](https://developer.emporix.io/documentation-portal/api-references/users-and-permissions/iam/api-reference/groups)   | The new query parameter `q` has been added.  |
 
 ## Known problems
 
