--- a/changelog/2025/2025-02-18-cart.md
+++ b/changelog/2025/2025-02-18-cart.md
@@ -45,9 +45,9 @@ Several fields in cart's response have been deprecated and are now replaced by `
 
 | Endpoint                                                                                               | Description                                                              |
 |--------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------|
-| [Retrieving cart details by ID](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid)         | Deprecated response fields are replaced by `calculatedPrice` and `unitPrice`. |
-| [Retrieving cart details by criteria](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts) | Deprecated response fields are replaced by `calculatedPrice` and `unitPrice`. |
-| [Retrieving all products added to a cart](https://emporix.gitbook.io/documentation-portal/api-references/checkout/cart/api-reference/cart-items#get-cart-tenant-carts-cartid-items)           | Deprecated response fields are replaced by `calculatedPrice` and `unitPrice`. |
+| [Retrieving cart details by ID](https://developer.emporix.io/documentation-portal/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts-cartid)         | Deprecated response fields are replaced by `calculatedPrice` and `unitPrice`. |
+| [Retrieving cart details by criteria](https://developer.emporix.io/documentation-portal/api-references/checkout/cart/api-reference/carts#get-cart-tenant-carts) | Deprecated response fields are replaced by `calculatedPrice` and `unitPrice`. |
+| [Retrieving all products added to a cart](https://developer.emporix.io/documentation-portal/api-references/checkout/cart/api-reference/cart-items#get-cart-tenant-carts-cartid-items)           | Deprecated response fields are replaced by `calculatedPrice` and `unitPrice`. |
 
 ## Known problems
 
