--- a/changelog/2025/2025-02-26-oauth.md
+++ b/changelog/2025/2025-02-26-oauth.md
@@ -26,7 +26,7 @@ If the value is provided in the request, the validation process ensures that the
 
 | Endpoint                                                               | Description                                                      |
 |------------------------------------------------------------------------|------------------------------------------------------------------|
-| [Refreshing a token](https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/authorization/oauth-service/api-reference/customer-token#get-customer-tenant-refreshauthtoken)  | The endpoint extended with an optional `legalEntityId` query param. |
+| [Refreshing a token](https://developer.emporix.io/documentation-portal/api-references/api-guides-and-references/authorization/oauth-service/api-reference/customer-token#get-customer-tenant-refreshauthtoken)  | The endpoint extended with an optional `legalEntityId` query param. |
 
 ## Known problems
 
