--- a/changelog/2025/2025-03-04-media.md
+++ b/changelog/2025/2025-03-04-media.md
@@ -23,8 +23,8 @@ Request body for creating or updating assets has been extended with new referenc
 
 | Endpoint                                                               | Description                                                      |
 |------------------------------------------------------------------------|------------------------------------------------------------------|
-| [Creating a media](https://emporix.gitbook.io/documentation-portal/api-references/media/media/api-reference/assets)  | Request body's `refIds.type` field has a new enum value - `BRAND`. |
-| [Updating a media](https://emporix.gitbook.io/documentation-portal/api-references/media/media/api-reference/assets#put-media-tenant-assets-assetid)   | Request body's `refIds.type` field has a new enum value - `BRAND`. |
+| [Creating a media](https://developer.emporix.io/documentation-portal/api-references/media/media/api-reference/assets)  | Request body's `refIds.type` field has a new enum value - `BRAND`. |
+| [Updating a media](https://developer.emporix.io/documentation-portal/api-references/media/media/api-reference/assets#put-media-tenant-assets-assetid)   | Request body's `refIds.type` field has a new enum value - `BRAND`. |
 
 ## Known problems
 
