--- a/changelog/2025/2025-03-27-quote.md
+++ b/changelog/2025/2025-03-27-quote.md
@@ -22,8 +22,8 @@ The `GET` endpoints for the Quote Service have been extended with the `businessM
 
 | Endpoint                                                                        | Description                                  |
 |---------------------------------------------------------------------------------|----------------------------------------------|
-| [Retrieving quotes](https://emporix.gitbook.io/documentation-portal/api-references/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes)            | Field `businessModel` added to the response. |
-| [Retrieving a single quote](https://emporix.gitbook.io/documentation-portal/api-references/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes-quoteid) | Field `businessModel` added to the response. |
+| [Retrieving quotes](https://developer.emporix.io/documentation-portal/api-references/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes)            | Field `businessModel` added to the response. |
+| [Retrieving a single quote](https://developer.emporix.io/documentation-portal/api-references/quotes/quote/api-reference/quote-management#get-quote-tenant-quotes-quoteid) | Field `businessModel` added to the response. |
 
 ## Known problems
 
