changelog links fix

--- a/changelog/2025/2025-05-12-customer.md
+++ b/changelog/2025/2025-05-12-customer.md
@@ -25,10 +25,15 @@ All deprecations will be removed on 2025-11-13. From now, use the new token prop
 
 | Endpoint                                                                                                                   | Description                                                                                                                                 |
 |----------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|
-| [Logging in a customer](/openapi/customer-customer/#operation/POST-customer-authenticate-customer)                         | New properties `access_token`, `saas_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response. |
+| [Logging in a customer](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#post-customer-tenant-login)                                                   | New properties `access_token`, `saas_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response. |
 | [Refreshing a customer token](/openapi/customer-customer/#operation/POST-customer-refresh-authtoken)                       | New properties `access_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response.               |
 | [Creating a customer account with double opt-in](/openapi/customer-customer/#operation/GET-customer-signup-customer-optin) | New properties `access_token`, `saas_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response. |
 
+attempt:
+https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#post-customer-tenant-login
+
+hard-coded:
+https://emporix.gitbook.io/documentation-portal/api-references/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#post-customer-tenant-login
 
 ## Known problems
 
