--- a/changelog/2025/2025-05-12-customer.md
+++ b/changelog/2025/2025-05-12-customer.md
@@ -26,8 +26,8 @@ All deprecations will be removed on 2025-11-13. From now, use the new token prop
 | Endpoint                                                                                                                   | Description                                                                                                                                 |
 |----------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|
 | [Logging in a customer](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#post-customer-tenant-login)                                                   | New properties `access_token`, `saas_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response. |
-| [Refreshing a customer token](/openapi/customer-customer/#operation/POST-customer-refresh-authtoken)                       | New properties `access_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response.               |
-| [Creating a customer account with double opt-in](/openapi/customer-customer/#operation/GET-customer-signup-customer-optin) | New properties `access_token`, `saas_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response. |
+| [Refreshing a customer token](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#get-customer-tenant-refreshauthtoken)                       | New properties `access_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response.               |
+| [Creating a customer account with double opt-in](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/customer-management/api-reference/double-opt-in#get-customer-tenant-signup-optin-token) | New properties `access_token`, `saas_token`, `expires_in`, `refresh_token`, `refresh_token_expires_in`, `token_type` added to the response. |
 
 [attempt](https://app.gitbook.com/s/d4POTWomuSS7d3dnh4Dg/api-guides-and-references/companies-and-customers/customer-management/api-reference/authentication-and-authorization#post-customer-tenant-login)
 
